re-arranged flask structure and added useful python and flask links doc

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ _mailinglist
 .tox/
 .cache/
 .pytest_cache/
+__pycache__/
 .idea/
 docs/_build/
 .vscode
@@ -23,3 +24,5 @@ htmlcov/
 .coverage
 .coverage.*
 *,cover
+
+instance/
